WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
195614
[EME][GStreamer] Speculative build fix
https://bugs.webkit.org/show_bug.cgi?id=195614
Summary
[EME][GStreamer] Speculative build fix
Enrique Ocaña
Reported
2019-03-12 03:14:40 PDT
The Linux WebKit builds are broken since
https://trac.webkit.org/changeset/242776/webkit
. I think (
https://build.webkit.org/builders/GTK%20Linux%2064-bit%20Debug%20%28Build%29/builds/19767/steps/compile-webkit/logs/stdio
) it's just a missing #include <wtf/RefPtr.h> in Source/WebCore/platform/graphics/gstreamer/eme/WebKitClearKeyDecryptorGStreamer.cpp.
Attachments
Patch
(1.34 KB, patch)
2019-03-12 03:19 PDT
,
Enrique Ocaña
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrique Ocaña
Comment 1
2019-03-12 03:19:06 PDT
Created
attachment 364375
[details]
Patch
WebKit Commit Bot
Comment 2
2019-03-12 03:59:36 PDT
Comment on
attachment 364375
[details]
Patch Clearing flags on attachment: 364375 Committed
r242790
: <
https://trac.webkit.org/changeset/242790
>
WebKit Commit Bot
Comment 3
2019-03-12 03:59:37 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-03-12 04:01:21 PDT
<
rdar://problem/48803634
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug